@@ -1,0 +1,10 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2020-08-24T16:30:29Z"
+ content="""
+The patch does not seem available, but as long as stack can build it, its
+fine to put any versions in there.
+
+I've upgraded the stack file today anyhow.
+"""]]
